--- a/index.html
+++ b/index.html
@@ -3,39 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Day 2</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <h1>To do List</h1>
+      <section class="input-area">
+        <input type="text" id="user" />
+        <button id="plus">+</button>
+      </section>
 
-
-      <div class ="container">
-          <h1>To do List</h1>
-          <section class ="input-area">
-              <input type ="text" id= "user"/>
-              <button id = "plus">+</button>
-          </section>
-      
-
-      <section class ="task-area">
-          <div class="task-tab">
-            <div id="under-line"></div>
-            <div>모두</div>
-            <div>진행중</div>
-            <div>끝남</div>
+      <section class="task-area">
+        <div class="task-tab">
+          <div id="under-line"></div>
+          <div id = "all">모두</div>
+          <div id = "ing">진행중</div>
+          <div id = "fin">끝남</div>
         </div>
-        <div id = "addbt">
-           
-        </div>
-        </div>
-    </section>
+        <div id="addbt"></div>
+      </section>
+    </div>
 
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
     <script src="day2.js"></script>
+    <script src="https://kit.fontawesome.com/40b01548e0.js" crossorigin="anonymous"></script>
   </body>
 </html>
